Fix overlapping effect of number in the result form, add exponential function on numbers

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p {
 #resultText {
     margin-top: 0px;
     margin-bottom: 20px;
+    word-break:break-word;
 }
 
 @media only screen and (max-width: 640px) {
